--- a/public/index.html
+++ b/public/index.html
@@ -3,11 +3,9 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Catch of the Day</title>
+    <title>Media Player</title>
   </head>
   <body>
-    <input type="checkbox" id="fold">
-    <label for="fold">Fold</label>
 
     <div id="main">
       <!-- This is where our React app will go -->
